improvements to hero + implemented animations + enabled --host on vite

--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -4,6 +4,8 @@ body {
     color: $text-gray;
     font-size: 1.25rem;
     letter-spacing: 1pt;
-    line-height: 1.75rem;
+    line-height: 150%;
     background-color: $bg-gray;
 }
+
+@import "./animations.scss";
