--- a/src/assets/scss/animations.scss
+++ b/src/assets/scss/animations.scss
@@ -99,3 +99,12 @@
         transform-origin: bottom;
     }
 }
+
+@keyframes levitate {
+    0% {
+        transform: translateY(-10px);
+    }
+    100% {
+        transform: translateY(10px);
+    }
+}
