--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -2,6 +2,8 @@ $accent-green: #386700;
 $text-gray: #2b3948;
 $bg-gray: #f5f3ee;
 
+$spacing: 8vw;
+
 $desktop: 720px;
 
 @mixin bg-graphic($path) {
