--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -1,3 +1,7 @@
+:root {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: "Roboto Slab", Georgia, "Times New Roman", Times, serif;
     margin: 0;
@@ -6,6 +10,10 @@ body {
     letter-spacing: 1pt;
     line-height: 150%;
     background-color: $bg-gray;
+}
+
+::-webkit-scrollbar {
+    width: 0;
 }
 
 @import "./animations.scss";
